# LibrairieImage_ITKVTK

Ball/: Ball.cpp  Ball.h  CMakeLists.txt
Balll/: Ball.cpp  Ball.h
Detecteur/: CMakeLists.txt  Detecteur.cpp
Game/: CMakeLists.txt  Game.cxx
ITK/: CMakeLists.txt  Image.cpp
ITKVTK/: CMakeLists.txt  Detection.cpp
Project1/: Project1.sln
Project1/Project1/: Project1.vcxproj
ProjectImage2023/: CMakeLists.txt  main.cpp
Visualiseur/: CMakeLists.txt  Visualiseur.cpp
cone/: CMakeLists.txt  cone_source.cpp  cone_source.h
exam/: CMakeLists.txt  exam.cpp
ratt/: CMakeLists.txt  Circle.cpp  start VS ITK VTK debug.bat  start VS ITK VTK release.bat
ratt/bah/: start VS ITK VTK debug.bat
rgb/: CMakeLists.txt  actor.h  rgb.cpp
sphere/: CMakeLists.txt  sphere.cpp
